[package]
authors = ["yisibl <percyley@qq.com>"]
edition = "2021"
name = "woff2-rs"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
woff2 = "0.3.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true    # Enable Link Time Optimization
# opt-level = 3
# Setting this to 1 may improve the performance of generated code, but may be slower to compile.
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[patch.crates-io]
woff2 = { git = "https://github.com/yisibl/woff2-rs", branch = "fix-total-compressed-size" }
# woff2 = { git = "https://github.com/yisibl/woff2-rs", rev = "65c0a0f0" }
